# yuno-q-and-a-back

./: .env.example  .gitignore  README.md  ci_pipeline.yaml  docker-compose.yaml  localhost-key.pem  localhost.pem  pyproject.toml  requirements.txt  sonar-project.properties  web-qa-assistant.py  web-qa.py
src/: main.py
src/controllers/: __init__.py  example_controller.py  healthy_controller.py
src/handlers/: errors.py
src/routes/: healthy.py
text/docs.y.uno/: docs.y.uno.txt  docs.y.uno_.txt  docs.y.uno_create-checkout-session.txt  docs.y.uno_create-customer.txt  docs.y.uno_create-payment.txt  docs.y.uno_docs.txt  docs.y.uno_docs_3d-secure.txt  docs.y.uno_docs_3ds-1.txt  docs.y.uno_docs_3ds-setup-sdk.txt  docs.y.uno_docs_accounts-management.txt  docs.y.uno_docs_acquirers-advanced-informations.txt  docs.y.uno_docs_acquirers.txt  docs.y.uno_docs_acuotaz-bnpl.txt  docs.y.uno_docs_acuotaz.txt  docs.y.uno_docs_addi-bnpl.txt  docs.y.uno_docs_addi.txt  docs.y.uno_docs_adyen-acquirer.txt  docs.y.uno_docs_adyen-cards.txt  docs.y.uno_docs_adyen-pix.txt  docs.y.uno_docs_adyen-processor.txt  docs.y.uno_docs_afghanistan.txt  docs.y.uno_docs_aland-islands.txt  docs.y.uno_docs_albania.txt  docs.y.uno_docs_algeria.txt  docs.y.uno_docs_andorra.txt  docs.y.uno_docs_android-sdk-integration.txt  docs.y.uno_docs_android-sdk-integrations.txt  docs.y.uno_docs_angola.txt  docs.y.uno_docs_anguilla.txt  docs.y.uno_docs_antigua-and-barbuda.txt  docs.y.uno_docs_apple-pay.txt  docs.y.uno_docs_arcus-cash.txt  docs.y.uno_docs_arcus.txt  docs.y.uno_docs_argentina.txt  docs.y.uno_docs_armenia.txt  (+1106 more)
(+1154 files in other folders)
